style.css
body {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

header {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

header ul {
  display: flex;
  list-style: none;
  gap: 50px;
}

.content {
  flex-grow: 1;
}

.content-top {
  display: flex;
  justify-content: center;
  gap: 100px;
}

.top-left {
  width: 500px;
}

.ribbon {
  margin-top: 100px;
}

.ribbon ul {
  display: flex;
  list-style: none;
  justify-content: space-evenly;
}
.ribbon ul li {
  display: flex;
  flex-direction: column;
  align-items: center;
}

